Example for the Ionosphere dataset

--- a/FeatureCreatorSPECT.ipynb
+++ b/FeatureCreatorSPECT.ipynb
@@ -17,6 +17,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -34,6 +42,14 @@
     "X = df.drop(columns=['OVERALL_DIAGNOSIS']).to_numpy()\n",
     "y = df['OVERALL_DIAGNOSIS'].to_numpy()\n",
     "print(X.shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define Classifiers"
    ]
   },
   {
@@ -69,12 +85,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Feature Creator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "feature_models, ga_fitness = fc.feature_creator(model,feature_model,X,y,n_features=5,batch_size=0.5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
    ]
   },
   {
@@ -250,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
