Feature Generator with DIRECT

--- a/FeatureCreatorSpamBase.ipynb
+++ b/FeatureCreatorSpamBase.ipynb
@@ -74,11 +74,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_models, ga_fitness = fc.feature_creator(model,feature_model,X,y,n_features=2,batch_size=0.03)"
+    "feature_models, ga_fitness = fc.feature_creator(model,\n",
+    "                                    feature_model,\n",
+    "                                    X,y,\n",
+    "                                    n_features=2,\n",
+    "                                    batch_size=50/len(y))"
    ]
   },
   {
