--- a/FeatureCreatorSPECT.ipynb
+++ b/FeatureCreatorSPECT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "0.6780952380952381"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,11 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "feature_models, ga_fitness = fc.feature_creator(model,feature_model,X,y,n_features=2,batch_size=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ga_fitness)"
    ]
   },
   {
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(80, 46)\n",
+      "(80, 44)\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_X.shape)\n",
     "print(X.shape)"
@@ -139,27 +157,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.135887  , 0.11976481, 0.16122186, ..., 0.15431235, 0.5       ,\n",
+       "        0.5       ],\n",
+       "       [0.15591649, 0.13426142, 0.14941997, ..., 0.12559939, 0.5       ,\n",
+       "        0.5       ],\n",
+       "       [0.16373405, 0.14297903, 0.16142794, ..., 0.10608121, 0.5       ,\n",
+       "        0.5       ],\n",
+       "       ...,\n",
+       "       [0.14701894, 0.140436  , 0.16018481, ..., 0.14921325, 0.5       ,\n",
+       "        0.5       ],\n",
+       "       [0.1524338 , 0.14570878, 0.1614005 , ..., 0.09863364, 0.5       ,\n",
+       "        0.5       ],\n",
+       "       [0.14780643, 0.12093254, 0.15452491, ..., 0.13212999, 0.5       ,\n",
+       "        0.5       ]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.135887  , 0.11976481, 0.16122186, ..., 0.17043454, 0.14740285,\n",
+       "        0.15431235],\n",
+       "       [0.15591649, 0.13426142, 0.14941997, ..., 0.15375098, 0.12126838,\n",
+       "        0.12559939],\n",
+       "       [0.16373405, 0.14297903, 0.16142794, ..., 0.09455065, 0.11761178,\n",
+       "        0.10608121],\n",
+       "       ...,\n",
+       "       [0.14701894, 0.140436  , 0.16018481, ..., 0.175545  , 0.14701894,\n",
+       "        0.14921325],\n",
+       "       [0.1524338 , 0.14570878, 0.1614005 , ..., 0.12553372, 0.13001707,\n",
+       "        0.09863364],\n",
+       "       [0.14780643, 0.12093254, 0.15452491, ..., 0.15228542, 0.13212999,\n",
+       "        0.13212999]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6780952380952381+-0.19253588763451576\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(model, X, y, cv=10, scoring='f1')\n",
     "print(f'{np.mean(scores)}+-{np.std(scores)}')"
@@ -167,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6780952380952381+-0.19253588763451576\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(model, new_X, y, cv=10, scoring='f1')\n",
     "print(f'{np.mean(scores)}+-{np.std(scores)}')"
@@ -199,12 +279,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "960c53438d19dd0eccb5b0fb2b7bbc5735ec1f50cd2fb9fbee49128b4ab11315"
+    "hash": "738f0abc388fde32d91a23dc48b434080bb97b14dd548d1e86272d1e373043ae"
    }
   }
  },
