Performed preliminary experiments with Logistic Regression and Powell's Method

--- a/FeatureCreatorSPECT.ipynb
+++ b/FeatureCreatorSPECT.ipynb
@@ -16,7 +16,8 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "import numpy as np\n",
     "from copy import copy\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
@@ -65,8 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model =  XGBClassifier()\n",
-    "feature_model = DecisionTreeRegressor(max_depth=5)"
+    "model =  LogisticRegression() #XGBClassifier()\n",
+    "feature_model = RandomForestRegressor(max_depth=3)"
    ]
   },
   {
@@ -77,7 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6780952380952381"
+       "0.5724603174603174"
       ]
      },
      "execution_count": 4,
@@ -103,9 +104,32 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
+      "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n",
+      "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
+      "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n",
+      "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
+      "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_models, results = fc.feature_creator(model,feature_model,X,y,n_features=4,batch_size=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "feature_models, results = fc.feature_creator(model,feature_model,X,y,n_features=10,batch_size=0.25)"
+    "for r in results:\n",
+    "    print(r.fun)"
    ]
   },
   {
@@ -135,24 +159,6 @@
    "source": [
     "print(new_X.shape)\n",
     "print(X.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X"
    ]
   },
   {
