--- a/FeatureCreatorIonosphere.ipynb
+++ b/FeatureCreatorIonosphere.ipynb
@@ -9,13 +9,15 @@
     "import feature_creator as fc\n",
     "import pandas as pd\n",
     "import xgboost as xgb\n",
-    "from xgboost.sklearn import XGBClassifier\n",
+    "from xgboost.sklearn import XGBClassifier,XGBRegressor\n",
     "from sklearn.model_selection import train_test_split,StratifiedShuffleSplit,cross_val_score\n",
     "from sklearn.base import clone\n",
+    "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "import numpy as np\n",
     "from copy import copy\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor"
+    "from sklearn import preprocessing\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
@@ -36,6 +38,8 @@
     "df = pd.read_csv('ionosphere_data.csv')\n",
     "X = df.drop(columns=['column_ai']).to_numpy()\n",
     "y = df['column_ai'].to_numpy()\n",
+    "\n",
+    "X = preprocessing.normalize(X)\n",
     "print(X.shape)\n",
     "print(y.shape)"
    ]
@@ -46,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = XGBClassifier()\n",
-    "feature_model = DecisionTreeRegressor(max_depth=5)"
+    "model =  LogisticRegression() #XGBClassifier()\n",
+    "feature_model = RandomForestRegressor(max_depth=3)"
    ]
   },
   {
@@ -58,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9326386565727123"
+       "0.9225773424481633"
       ]
      },
      "execution_count": 4,
@@ -76,14 +80,50 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
+      "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n",
+      "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
+      "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n",
+      "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
+      "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n",
+      "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
+      "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n"
+     ]
+    }
+   ],
    "source": [
-    "feature_models, ga_fitness = fc.feature_creator(model,feature_model,X,y,n_features=2,batch_size=0.2)"
+    "feature_models, results = fc.feature_creator(model,feature_model,X,y,n_features=4,batch_size=50/len(y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.9168831168831169\n",
+      "-0.8219413919413918\n",
+      "-0.878095238095238\n",
+      "-0.8447058823529412\n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in results:\n",
+    "    print(r.fun)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -102,32 +142,13 @@
      "output_type": "stream",
      "text": [
       "(351, 34)\n",
-      "(351, 36)\n"
+      "(351, 38)\n"
      ]
     }
    ],
    "source": [
     "print(X.shape)\n",
     "print(new_X.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9326386565727123+-0.03754606240979971\n"
-     ]
-    }
-   ],
-   "source": [
-    "# BaseLine\n",
-    "scores = cross_val_score(model, X, y, cv=10, scoring='f1')\n",
-    "print(f'{np.mean(scores)}+-{np.std(scores)}')"
    ]
   },
   {
@@ -139,7 +160,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9410847725685179+-0.03545589875863506\n"
+      "0.9225773424481633+-0.03703862341024692\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BaseLine\n",
+    "scores = cross_val_score(model, X, y, cv=10, scoring='f1')\n",
+    "print(f'{np.mean(scores)}+-{np.std(scores)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9404827217350091+-0.043807216736305415\n"
      ]
     }
    ],
@@ -148,6 +188,13 @@
     "scores = cross_val_score(model, new_X, y, cv=10, scoring='f1')\n",
     "print(f'{np.mean(scores)}+-{np.std(scores)}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -166,12 +213,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "960c53438d19dd0eccb5b0fb2b7bbc5735ec1f50cd2fb9fbee49128b4ab11315"
+    "hash": "738f0abc388fde32d91a23dc48b434080bb97b14dd548d1e86272d1e373043ae"
    }
   }
  },
