--- a/FeatureCreatorSPECT.ipynb
+++ b/FeatureCreatorSPECT.ipynb
@@ -114,6 +114,8 @@
       "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
       "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n",
       "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
+      "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n",
+      "c:\\Users\\rcpsi\\source\\repos\\FeatureGeneration\\feature_creator.py:37: OptimizeWarning: Unknown solver options: xatol, fatol\n",
       "  res = minimize(fitness_function, x0, method='Powell',options=options,bounds=bounds)\n"
      ]
     }
@@ -124,9 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.0\n",
+      "-1.0\n",
+      "-1.0\n",
+      "-1.0\n"
+     ]
+    }
+   ],
    "source": [
     "for r in results:\n",
     "    print(r.fun)"
@@ -142,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(80, 48)\n",
+      "(80, 44)\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_X.shape)\n",
     "print(X.shape)"
@@ -163,9 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5724603174603174+-0.22907793582157168\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(model, X, y, cv=10, scoring='f1')\n",
     "print(f'{np.mean(scores)}+-{np.std(scores)}')"
@@ -173,9 +203,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8607142857142858+-0.12172194563173443\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(model, new_X, y, cv=10, scoring='f1')\n",
     "print(f'{np.mean(scores)}+-{np.std(scores)}')"
