--- a/FeatureCreatorSpamBase.ipynb
+++ b/FeatureCreatorSpamBase.ipynb
@@ -9,13 +9,15 @@
     "import feature_creator as fc\n",
     "import pandas as pd\n",
     "import xgboost as xgb\n",
-    "from xgboost.sklearn import XGBClassifier\n",
+    "from xgboost.sklearn import XGBClassifier,XGBRegressor\n",
     "from sklearn.model_selection import train_test_split,StratifiedShuffleSplit,cross_val_score\n",
     "from sklearn.base import clone\n",
+    "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "import numpy as np\n",
     "from copy import copy\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor"
+    "from sklearn import preprocessing\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
@@ -46,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model =  XGBClassifier()\n",
-    "feature_model = DecisionTreeRegressor(max_depth=5)"
+    "model =  LogisticRegression() #XGBClassifier()\n",
+    "feature_model = RandomForestRegressor(max_depth=3)"
    ]
   },
   {
